# mazes

./: .gitignore  Cargo.toml  test_debug.txt
Notes/: Grid Spreadsheet.ods  Grid and Location Transform.txt
maze-algos/: Cargo.toml
maze-algos/src/: main.rs
maze-interface/: Cargo.toml
maze-interface/src/: cells.rs  lib.rs  maze.rs  maze_cell.rs  maze_grid.rs  points.rs  removed.rs
maze-interface/src/cells/: maze_cell.rs  maze_grid.rs  points.rs
maze_algos/: Cargo.toml
maze_algos/src/: main.rs  test_mazegrid.rs
maze_interface/: Cargo.toml
maze_interface/src/: cells.rs  coords.rs  lib.rs  location.rs  maze_cell.rs  maze_grid.rs  points.rs  render.rs
src/: error.rs  iter.rs  lib.rs  maze.rs  trans.rs  util.rs
src/algo/: mod.rs
src/maze/: rect.rs
src/maze/sq/: cell.rs  mod.rs
src/render/: blocks.rs  mod.rs  opts.rs  renderers.rs
src/render/renderers/: anim.rs  custom.rs  dist_map.rs  grid.rs  heat.rs  path_map.rs
src/util/: capacity.rs  cardinal.rs  dist.rs  index.rs  ordinal.rs  path.rs  row_size.rs  visit.rs
