[package]
name = "mazes"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.6.1"
thiserror = "1.0.30"
anyhow = "1.0.44"
parse-display = "0.5.3"
rand = "0.8.4"
rand_xoshiro = "0.6.0"
# imageproc = "0.22.0"
# image = "0.23.14"
# rusttype = "0.9.2"
