[package]
name = "mazes"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.6.1"
thiserror = "1.0.30"
anyhow = "1.0.44"
parse-display = "0.5.3"
rand = "0.8.4"
rand_xoshiro = "0.6.0"
imageproc = "0.22.0"
image = "0.23.14"
rusttype = "0.9.2"
sealed = "0.3.0"
log = "0.4.14"
linked_hash_set = "0.1.4"
index_list = "0.2.7"
webp-animation = "0.5.0"
